--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "think_view",
-  "version": "1.1.6",
-  "description": "View engine for ThinkKoa.",
+  "version": "2.0.0",
+  "description": "View engine Middleware for ThinkKoa.",
   "main": "index.js",
   "scripts": {
     "test": "npm run eslint",
@@ -12,22 +12,22 @@
     "eslint": "eslint src"
   },
   "engines": {
-    "node": ">6.0.0"
+    "node": ">8.0.0"
   },
   "author": "richenlin",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/thinkkoa/think_view/issues"
+  },
+  "homepage": "https://github.com/thinkkoa/think_view",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.5.1",
-    "eslint": "^3.19.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.4.2"
+    "eslint": "^4.4.1",
+    "istanbul": "^1.1.0-alpha.1",
+    "mocha": "^3.5.0",
+    "supertest": "^3.0.0"
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "think_lib": "^1.x.x"
+    "think_lib": "^2.x.x"
   }
 }
