--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "think_view",
-  "version": "2.2.1",
+  "version": "2.2.6",
   "description": "View engine Middleware for ThinkKoa.",
   "main": "index.js",
   "scripts": {
     "test": "npm run eslint",
-    "eslint": "eslint src"
+    "eslint": "eslint ./"
   },
   "engines": {
     "node": ">8.0.0"
@@ -17,12 +17,10 @@
   },
   "homepage": "https://github.com/thinkkoa/think_view",
   "devDependencies": {
-    "eslint": "^6.5.1",
-    "mocha": "^6.2.2",
-    "supertest": "^4.0.2"
+    "eslint": "^6.8.0"
   },
   "dependencies": {
-    "ejs": "^2.7.1",
+    "ejs": "^3.0.1",
     "think_lib": "^2.x.x"
   }
 }
